added layouts, views and partials

--- a/views/game.hbs
+++ b/views/game.hbs
@@ -3,7 +3,9 @@
 </div>
 <div class="gameView">
   <div class ="questionOne">
+    <a href="{{option1url}}">{{option1}}</a>
   </div>
   <div class="questionTwo">
+    <a href="{{option2url}}">{{option2}}</a>
   </div>
 </div>
