--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Would You Rather?</title>
-    <link
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   </head>
   <body>
     <div class="app">
