created basic rankings page

--- a/views/game.hbs
+++ b/views/game.hbs
@@ -8,4 +8,7 @@
   <div class="questionTwo">
     <a href="{{option2url}}">{{option2}}</a>
   </div>
+  <div>
+    <p><a href="/rankings">Rankings</a></p>
+  </div>
 </div>
