changed rankings homepage link and added OR between questions

--- a/views/game.hbs
+++ b/views/game.hbs
@@ -5,10 +5,12 @@
   <div class ="questionOne">
     <a href="{{option1url}}">{{option1}}</a>
   </div>
+  <h2>OR</h2>
   <div class="questionTwo">
     <a href="{{option2url}}">{{option2}}</a>
   </div>
   <div>
-    <p><a href="/rankings">Rankings</a></p>
+    <p><a href="{{rankingurl}}">Rankings</a></p>
   </div>
+  <a class="nav" href="/">Reset Game</a>
 </div>
