--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   </head>
   <body>
+    <div class="homeLink">
+      <a href="{{homeurl}}">Home</a>
+    </div>
     <div class="app">
-        <a class="nav" href="/">Home</a>
         {{{body}}}
     </div>
   </body>
