--- a/views/game.hbs
+++ b/views/game.hbs
@@ -2,15 +2,31 @@
   <h2>{{name}}! Would you rather ...</h2>
 </div>
 <div class="gameView">
-  <div class ="questionOne">
-    <a href="{{option1url}}">{{option1}}</a>
+  <div class="questionOne">
+    <a href="{{option1url}}">
+      <p>{{option1}}</p>
+    </a>
   </div>
   <h2>OR</h2>
   <div class="questionTwo">
-    <a href="{{option2url}}">{{option2}}</a>
+    <a href="{{option2url}}">
+      <p>{{option2}}</p>
+    </a>
   </div>
-  <div>
-    <p><a href="{{rankingurl}}">Rankings</a></p>
+  <div class="cantchoose">
+    <a href="{{cantchooseurl}}">
+      <p>{{cantchoose}}</p>
+    </a>
   </div>
-  <a class="nav" href="/">Reset Game</a>
+  <div class="taunt">
+    <p>{{taunt}}</p>
+  </div>
+  <div class="footer">
+    <div class="ranking">
+      <p><a href="{{rankingurl}}">Rankings</a></p>
+    </div>
+    <div class="reset">
+      <p><a href="/">Reset Game</a></p>
+    </div>
+  </div>
 </div>
