--- a/views/game.hbs
+++ b/views/game.hbs
@@ -13,6 +13,9 @@
       <p>{{option2}}</p>
     </a>
   </div>
+</div>
+
+<div class="afterQuestions">
   <div class="cantchoose">
     <a href="{{cantchooseurl}}">
       <p>{{cantchoose}}</p>
@@ -21,12 +24,13 @@
   <div class="taunt">
     <p>{{taunt}}</p>
   </div>
-  <div class="footer">
-    <div class="ranking">
-      <p><a href="{{rankingurl}}">Rankings</a></p>
-    </div>
-    <div class="reset">
-      <p><a href="/">Reset Game</a></p>
-    </div>
+</div>
+
+<div class="footer">
+  <div class="ranking">
+    <p><a href="{{rankingurl}}">Rankings</a></p>
+  </div>
+  <div class="reset">
+    <p><a href="/">Reset Game</a></p>
   </div>
 </div>
