--- a/views/game.hbs
+++ b/views/game.hbs
@@ -28,10 +28,14 @@
 </div>
 
 <div class="footer">
-  <div class="ranking">
-    <p><a href="{{rankingurl}}">Rankings</a></p>
-  </div>
-  <div class="reset">
-    <p><a href="/">Reset Game</a></p>
-  </div>
+
+  <a href="{{rankingurl}}">
+    <div class="ranking">Rankings</div>
+  </a>
+
+
+  <a href="/">
+    <div class="reset">Reset Game</div>
+  </a>
+
 </div>
