--- a/views/ranking.hbs
+++ b/views/ranking.hbs
@@ -1,3 +1,8 @@
+<a href="{{homeurl}}">
+  <div class="homeLink">
+    Home
+  </div>
+</a>
 <div class="rankingTable">
   <div class = "headings">
     <!-- <div class = "percentage"> -->
